NUCLEO-F446-RE/.metadata/.plugins/org.eclipse.cdt.ui/stm32f446re_driver_gpio_spi_uart_i2c_rcc_nvic.build.log
00:54:39 **** Incremental Build of configuration Debug for project stm32f446re_driver_gpio_spi_uart_i2c_rcc_nvic ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/GPIO_driver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/GPIO_driver.d" -MT"Core/Src/GPIO_driver.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/GPIO_driver.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
In file included from ../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:156,
                 from ../Core/Src/GPIO_driver.c:9:
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:469:3: error: conflicting types for 'GPIO_TypeDef'; have 'struct <anonymous>'
  469 | } GPIO_TypeDef;
      |   ^~~~~~~~~~~~
In file included from ../Core/Src/GPIO_driver.c:8:
../Core/Inc/GPIO_driver.h:94:2: note: previous declaration of 'GPIO_TypeDef' with type 'GPIO_TypeDef'
   94 | }GPIO_TypeDef;
      |  ^~~~~~~~~~~~
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:1121: warning: "GPIOA" redefined
 1121 | #define GPIOA               ((GPIO_TypeDef *) GPIOA_BASE)
      | 
../Core/Inc/GPIO_driver.h:107: note: this is the location of the previous definition
  107 | #define GPIOA   ((GPIO_Typedef *) GPIOA_BASE_ADDR)
      | 
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:1122: warning: "GPIOB" redefined
 1122 | #define GPIOB               ((GPIO_TypeDef *) GPIOB_BASE)
      | 
../Core/Inc/GPIO_driver.h:108: note: this is the location of the previous definition
  108 | #define GPIOB   ((GPIO_Typedef *) GPIOB_BASE_ADDR)
      | 
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:1123: warning: "GPIOC" redefined
 1123 | #define GPIOC               ((GPIO_TypeDef *) GPIOC_BASE)
      | 
../Core/Inc/GPIO_driver.h:109: note: this is the location of the previous definition
  109 | #define GPIOC   ((GPIO_Typedef *) GPIOC_BASE_ADDR)
      | 
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:1124: warning: "GPIOD" redefined
 1124 | #define GPIOD               ((GPIO_TypeDef *) GPIOD_BASE)
      | 
../Core/Inc/GPIO_driver.h:110: note: this is the location of the previous definition
  110 | #define GPIOD   ((GPIO_Typedef *) GPIOD_BASE_ADDR)
      | 
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:1125: warning: "GPIOE" redefined
 1125 | #define GPIOE               ((GPIO_TypeDef *) GPIOE_BASE)
      | 
../Core/Inc/GPIO_driver.h:111: note: this is the location of the previous definition
  111 | #define GPIOE   ((GPIO_Typedef *) GPIOE_BASE_ADDR)
      | 
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:1126: warning: "GPIOF" redefined
 1126 | #define GPIOF               ((GPIO_TypeDef *) GPIOF_BASE)
      | 
../Core/Inc/GPIO_driver.h:112: note: this is the location of the previous definition
  112 | #define GPIOF   ((GPIO_Typedef *) GPIOF_BASE_ADDR)
      | 
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:1127: warning: "GPIOG" redefined
 1127 | #define GPIOG               ((GPIO_TypeDef *) GPIOG_BASE)
      | 
../Core/Inc/GPIO_driver.h:113: note: this is the location of the previous definition
  113 | #define GPIOG   ((GPIO_Typedef *) GPIOG_BASE_ADDR)
      | 
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h:1128: warning: "GPIOH" redefined
 1128 | #define GPIOH               ((GPIO_TypeDef *) GPIOH_BASE)
      | 
../Core/Inc/GPIO_driver.h:114: note: this is the location of the previous definition
  114 | #define GPIOH   ((GPIO_Typedef *) GPIOH_BASE_ADDR)
      | 
../Core/Src/GPIO_driver.c: In function 'GPIO_Init':
../Core/Src/GPIO_driver.c:21:9: error: pointers are not permitted as case values
   21 |         case GPIOA:
      |         ^~~~
../Core/Src/GPIO_driver.c:24:9: error: pointers are not permitted as case values
   24 |         case GPIOB:
      |         ^~~~
../Core/Src/GPIO_driver.c:27:9: error: pointers are not permitted as case values
   27 |         case GPIOC:
      |         ^~~~
../Core/Src/GPIO_driver.c:30:9: error: pointers are not permitted as case values
   30 |         case GPIOD:
      |         ^~~~
../Core/Src/GPIO_driver.c:33:9: error: pointers are not permitted as case values
   33 |         case GPIOE:
      |         ^~~~
../Core/Src/GPIO_driver.c:36:9: error: pointers are not permitted as case values
   36 |         case GPIOF:
      |         ^~~~
../Core/Src/GPIO_driver.c:39:9: error: pointers are not permitted as case values
   39 |         case GPIOG:
      |         ^~~~
../Core/Src/GPIO_driver.c:42:9: error: pointers are not permitted as case values
   42 |         case GPIOH:
      |         ^~~~
../Core/Src/GPIO_driver.c:50:9: error: pointers are not permitted as case values
   50 |         case GPIOA: gpio_port = GPIOA; break;
      |         ^~~~
../Core/Src/GPIO_driver.c:51:9: error: pointers are not permitted as case values
   51 |         case GPIOB: gpio_port = GPIOB; break;
      |         ^~~~
../Core/Src/GPIO_driver.c:52:9: error: pointers are not permitted as case values
   52 |         case GPIOC: gpio_port = GPIOC; break;
      |         ^~~~
../Core/Src/GPIO_driver.c:53:9: error: pointers are not permitted as case values
   53 |         case GPIOD: gpio_port = GPIOD; break;
      |         ^~~~
../Core/Src/GPIO_driver.c:54:9: error: pointers are not permitted as case values
   54 |         case GPIOE: gpio_port = GPIOE; break;
      |         ^~~~
../Core/Src/GPIO_driver.c:55:9: error: pointers are not permitted as case values
   55 |         case GPIOF: gpio_port = GPIOF; break;
      |         ^~~~
../Core/Src/GPIO_driver.c:56:9: error: pointers are not permitted as case values
   56 |         case GPIOG: gpio_port = GPIOG; break;
      |         ^~~~
../Core/Src/GPIO_driver.c:57:9: error: pointers are not permitted as case values
   57 |         case GPIOH: gpio_port = GPIOH; break;
      |         ^~~~
../Core/Src/GPIO_driver.c:61:28: error: expected expression before '<<' token
   61 |     gpio_port->MODER &= ~( << )
      |                            ^~
../Core/Src/GPIO_driver.c:61:32: error: expected ';' before '}' token
   61 |     gpio_port->MODER &= ~( << )
      |                                ^
      |                                ;
   62 | }
      | ~                               
../Core/Src/GPIO_driver.c: At top level:
../Core/Src/GPIO_driver.c:71:6: error: conflicting types for 'GPIO_ReadPin'; have 'void(GPIO_Port,  GPIO_PinNumber)'
   71 | void GPIO_ReadPin(GPIO_Port port, GPIO_PinNumber pin);
      |      ^~~~~~~~~~~~
../Core/Inc/GPIO_driver.h:143:9: note: previous declaration of 'GPIO_ReadPin' with type 'uint8_t(GPIO_Port,  GPIO_PinNumber)' {aka 'unsigned char(GPIO_Port,  GPIO_PinNumber)'}
  143 | uint8_t GPIO_ReadPin(GPIO_Port port, GPIO_PinNumber pin);
      |         ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/GPIO_driver.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

00:54:40 Build Failed. 22 errors, 8 warnings. (took 628ms)

